--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "blog",
   "main": "src/index.js",
   "scripts": {
+    "start": "node src/index",
     "server": "nodemon --inspect src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
